docs/tests/parser/structs/valid/RegularStructWithFields.src
struct Point {
    let int x;
    let int y;
}
