docs/tests/parser/structs/invalid/StructMissingOpenBrace.src
struct Foo
    let int x;
}
